[package]
name = "twit-rs"
version = "0.1.0"
authors = ["jbfp <jakob@jbfp.dk>"]
edition = "2018"

[dependencies]
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
handlebars = { version = "3.5.0", features = ["dir_source"] }
listenfd = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.3", features = ["full"] }
